# eMoL

./: .cursorrules  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README  README.md  docker-compose.yml  local_gunicorn.sh  local_runserver.sh  poetry.toml  pyproject.toml  requirements.txt  run_local.sh
docker_files/: entrypoint.sh  nginx.conf
emol/: local_gunicorn.sh  manage.py
emol/cards/: apps.py  urls.py
emol/cards/admin/: __init__.py  authorization.py  card.py  combatant.py  discipline.py  marshal.py  permission.py  privacy.py  privacy_acceptance.py  region.py  reminder.py  reminder_email.py  update_code.py  user_permission.py  waiver.py
emol/cards/api/: card.py  combatant.py  combatant_authorization.py  combatant_warrant.py  permissions.py  privacy.py  serializer_fields.py  urls.py  waiver.py
emol/cards/mail/: __init__.py  email_templates.py
emol/cards/migrations/: 0001_initial.py  0002_alter_authorization_slug_and_more.py  (+7 more)
emol/current_user/: __init__.py  middleware.py
emol/emailer/: __init__.py
emol/emol/: asgi.py  cloud.py  sample_settings.py  sample_settings_prod.py  secrets.py  urls.py  wsgi.py
emol/global_throttle/: decorators.py  middleware.py  tests.py
emol/sso_user/: apps.py  decorators.py  google_oauth.py  tests.py  urls.py  views.py
requirements/: dev.txt  prod.txt
setup_files/: bootstrap.sh  bootstrap_system.sh  db.sh  deploy.sh  docker-entrypoint.sh  emol  nginx.conf  run_local.sh  setup.sh  setup_cron.sh
setup_files/configs/: emol  nginx.conf  nginx.dev.conf  nginx.prod.conf  proxy_params
templates/: 429.html
(+101 files in other folders)
